NIAD-3369: Update XmlBeans to version `4.0.0`
* Update Schema JAR file to one having been built using XmlBeans `4.0.0`.
* Update XML validator to use the base exception type of `XmlException` rather than `XmlValidationExceptions` as this is what is now used in `4.0.0`.
* Update build.gradle to use the latest version of the `iucds-schema`.
* Fix minor language errors in the validator which are producing warnings now.